--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+  <meta charset="UTF-8">
+  <title>CodePen - 3D Flower, CSS + JS</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>T</span>
-        <span>O</span>
-        <span>T</span>
-    </div>
-    <div class="description">
-        <span>Aku punya sesuatu buat kamu nii!!</span>
-    </div>
-    <div class="button">
-        <button>
-            <a href="flower.html">Klik disini</a>
-        </button>
-        
-    </div>
+<!-- partial:index.partial.html -->
+<div class="wrapper">
+    <div class="flower"></div>
+</div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
